--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,5 +22,22 @@ section {
     padding-bottom: 20px;
 }
 
+/* Header Style */
+
+header {
+    padding:20px 35px;
+    background-color: var(--primary-color);
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    z-index: 9999;
+}
+
+header h1 {
+    font-weight: bold;
+}
+
 
 
