--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
 body {
     color: var(--second-color);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 0;
+    background-color: var(--primary-color);
 }
 
 section {
@@ -66,7 +66,7 @@ header nav ul {
 header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
-    font-size: 1.45vw;
+    font-size: 25px;
     text-shadow: 0 0 10px rgba(247, 215, 22, 0.5);
 }
 
@@ -75,9 +75,9 @@ header nav ul li a {
 /* Start Hero */
 
 .hero {
-    background-color: #F24C4C;
+    background-image: url("../images/guitar_me.jpg");
     background-size: cover;
-    position: relative;
+    position:relative;
     display: flex;
     justify-content: right;
     flex-wrap: wrap;
@@ -94,39 +94,96 @@ header nav ul li a {
     position: absolute; bottom: 0; right: 0;
     text-shadow: 0 0 10px rgba(41, 52, 98, 0.5);
     color: #293462;
+    padding-right: 10px;
 }
 
 /* End Hero */
 
+/* Shared Features*/
+
+.section-title {
+    text-align: center;
+    background-color: #293462;
+    text-decoration: underline;
+    text-decoration-color: #F7D716;
+    text-shadow: 0 0 10px rgba(247, 215, 22, 0.5);
+    padding-bottom: 30px;
+    padding-top: 10px;
+    font-size: 35px;
+}
+
 /* Start About Me */
 
-.personal-info {
+.section-title-2 {
     text-align: center;
-    background: #293462;
-    flex: auto;
-    justify-content: space-around;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-
-}
-
-.personal-info h2 {
     text-decoration: underline;
-    text-decoration-color: var(--third-color);
-    font-size: 40px;
-    text-shadow: 0 0 10px rgba(247, 215, 22, 0.5);
-    margin-bottom: 20px;
-    text-align: center;
+    text-decoration-color: #F7D716;
+    font-size: 35px;
+    text-shadow: 0 0 10px rgba(236, 155, 59, 0.8);
+    padding-bottom: 30px;
+    padding-top: 10px;
 }
 
-.personal-info img {
-    width: auto;
-    max-height: 300px;
+.personal-info {
+    color: var(--primary-color);
+    background-color: var(--second-color);
     flex: auto;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
 }
 
 .personal-info p {
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+    font-size: larger;
+}
+
+/* End About Me */
+
+/* Start Work */
+
+.working-web img {
+    display: flex;
+    flex-wrap: wrap;
+    width: 30%;
+    height: 100%;
+    justify-content: space-around;
+    align-items: flex-start;
+    margin: auto;
+    text-align: center;
+    flex-direction: column;
+}
+
+.img-to-run-buddy {
+    float: left;
+}
+
+/* Contact */
+
+
+footer {
+    background: #F24C4C;
+    padding-top: 20px;
+    font-size: 20px;
+    padding-bottom: 20px;
+}
+
+footer h2 {
+    color: var(--primary-color);
+    padding-left: 10px;
+    padding-right: 20px;
+    text-align: center;
+    text-shadow: 0 0 10px rgba(236, 155, 59, 0.8);
+    text-decoration: underline;
+    text-decoration-color: #F7D716;
 
 }
 
+address {
+    background-color: #F24C4C;
+    color: var(--primary-color);
+    width: 100%;
+    text-align: center;
+}
