--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,49 +185,54 @@ header nav ul li a:hover {
 
 /* Start Work */
 
-.working-web {
-    color: var(--primary-color);
-    background-color: var(--second-color);
-    flex: auto;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 95%;
-    margin: 25px auto;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
-}
-
-.work-parent {
+.live-links {
+    width: 80%;
+    min-height: 100%;
+    margin: 4vh auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    min-height: 100%;
 }
 
-.shared-work {
+.live-links-rb {
+    background: url(../images/hero-bg.jpg);
+    width: 98%;
+}
+
+.live-links-hori {
+    background: url(../images/digital-marketing-meeting.jpg);
+    width: 40%;
+    margin: 20px 0.6rem;
+}
+
+.live-links-port {
+    background: url(../images/guitar_me.jpg);
+    width: 40%;
+    margin: 20px 0.6rem;
+}
+
+.live-links-box {
+    display: flex;
     background-size: cover;
     background-position: center;
-    display: flex;
-    height: 400px;
+    height: 600px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
 }
 
-.run-buddy {
-    background: url(../images/hero-bg.jpg);
-    width: 100%;
-    height: 400px;
-    margin: 25px auto;
+.live-links-text {
+    margin: auto;
+    width: 30%;
+    height: 55px;
+    text-align: center;
+    align-items: center;
+    background-color: var(--fourth-color);
 }
 
-.horiseon img {
-    background-image: url(./images/digital-marketing-meeting.jpg);
-    width: 100%;
-    height: 400px;
-}
-
-.portfolio img {
-    background-image: url(../images/guitar_me.jpg);
-    width: 100%;
-    height: 200px;
+.live-links-text a button {
+    padding: 10px 15px;
+    background-color: var(--fourth-color);
+    border: none;
+    cursor: pointer;
 }
 
 
