section and label cleanup

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,25 +124,22 @@ header nav ul li a:hover {
     text-align: center;
     background-color: #293462;
     text-decoration: underline;
-    text-decoration-color: #F7D716;
+    text-decoration-color: var(--fourth-color);
     text-shadow: 0 0 10px rgba(247, 215, 22, 0.5);
     padding-bottom: 30px;
     padding-top: 10px;
     font-size: 35px;
 }
 
-/* Start About Me */
-
 .section-title-2 {
     text-align: center;
     text-decoration: underline;
-    text-decoration-color: #F7D716;
+    text-decoration-color: var(--fourth-color);
     font-size: 35px;
     text-shadow: 0 0 10px rgba(236, 155, 59, 0.8);
     padding-bottom: 30px;
     padding-top: 10px;
 }
-/* fix this*/
 
 /* About Me section */
 
@@ -150,6 +147,7 @@ header nav ul li a:hover {
     display: flex;
     align-items: center;
 }
+
 .personal-info {
     color: var(--primary-color);
     background-color: var(--second-color);
@@ -232,13 +230,16 @@ header nav ul li a:hover {
     padding: 10px 15px;
     background-color: var(--fourth-color);
     border: none;
+    border-radius: 20%;
     cursor: pointer;
 }
+
+/* End Work Section */
 
 
 /* Contact Footer*/
 .reach-me {
-    background: #F24C4C;
+    background: var(--second-color);
     padding-top: 20px;
     font-size: 20px;
     padding-bottom: 20px;
@@ -259,7 +260,7 @@ header nav ul li a:hover {
 }
 
 address {
-    background-color: #F24C4C;
+    background-color: var(--second-color);
     color: var(--primary-color);
     width: 100%;
     text-align: center;
@@ -269,3 +270,5 @@ address a:hover {
     color: var(--third-color);
     background-color: var(--primary-color);
 }
+
+/* End Contact Section */
