--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 :root {
-    --primary-color:#293462;
-    --second-color:#F24C4C;
-    --third-color:#EC9B3B;
-    --fourth-color:#F7D716; 
+    --primary-color:#809A6f;
+    --second-color:#A25B5B;
+    --third-color:#CC9C75;
+    --fourth-color:#D5D8B5; 
 }
 
 * {
@@ -134,7 +134,7 @@ header nav ul li a:hover {
 .section-title-2 {
     text-align: center;
     text-decoration: underline;
-    text-decoration-color: var(--fourth-color);
+    text-decoration-color: var(--third-color);
     font-size: 35px;
     text-shadow: 0 0 10px rgba(236, 155, 59, 0.8);
     padding-bottom: 30px;
@@ -149,7 +149,7 @@ header nav ul li a:hover {
 }
 
 .personal-info {
-    color: var(--primary-color);
+    color: var(--fourth-color);
     background-color: var(--second-color);
     flex: auto;
     flex-wrap: wrap;
@@ -158,6 +158,7 @@ header nav ul li a:hover {
     width: 95%;
     margin: 25px auto;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+    border-radius: 5%;
 
 }
 
@@ -190,48 +191,72 @@ header nav ul li a:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    border-radius: 5%;
 }
 
 .live-links-rb {
     background: url(../images/hero-bg.jpg);
     width: 98%;
+    border-radius: 5%;
+    position: relative;
 }
 
 .live-links-hori {
     background: url(../images/digital-marketing-meeting.jpg);
-    width: 40%;
+    width: 35%;
     margin: 20px 0.6rem;
+    border-radius: 5%;
+    position: relative;
 }
 
 .live-links-port {
     background: url(../images/guitar_me.jpg);
-    width: 40%;
+    width: 35%;
     margin: 20px 0.6rem;
+    border-radius: 5%;
+    position: relative;
 }
 
 .live-links-box {
     display: flex;
     background-size: cover;
     background-position: center;
-    height: 600px;
+    height: 360px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+    position: relative;
 }
 
 .live-links-text {
     margin: auto;
-    width: 30%;
-    height: 55px;
+    width: 20%;
+    height: 100px;
     text-align: center;
-    align-items: center;
-    background-color: var(--fourth-color);
+    align-items: flex-end;
+    border-radius: 20%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+.working-web-maintext {
+    font-size: 20px;
+}
+
+.working-web-othertext {
+    font-size: 15px;
 }
 
 .live-links-text a button {
     padding: 10px 15px;
-    background-color: var(--fourth-color);
+    background-color: rgba(162, 91, 91, 0.6);
+    background-repeat: no-repeat;
     border: none;
-    border-radius: 20%;
+    border-radius: 0%;
     cursor: pointer;
+    position:absolute;
+    right: 0;
+    bottom: 0;
+    border-radius: 10%;
 }
 
 /* End Work Section */
@@ -245,17 +270,18 @@ header nav ul li a:hover {
     padding-bottom: 20px;
     margin: 25px auto;
     width: 95%;
+    border-radius: 5%;
 }
 
 .reach-me h2 {
-    color: var(--primary-color);
+    color: var(--fourth-color);
     padding-left: 10px;
     padding-right: 20px;
     padding-bottom: 20px;
     text-align: center;
     text-shadow: 0 0 10px rgba(236, 155, 59, 0.8);
     text-decoration: underline;
-    text-decoration-color: #F7D716;
+    text-decoration-color: var(--third-color);
 
 }
 
