--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,8 @@
 :root {
-    --primary-color:#809A6f;
-    --second-color:#A25B5B;
-    --third-color:#CC9C75;
-    --fourth-color:#D5D8B5; 
+    --primary-color:#212121;
+    --second-color:#6D9886;
+    --third-color:#D9CAB3;
+    --fourth-color:#F6F6F6; 
 }
 
 * {
@@ -12,7 +12,7 @@
 }
 
 body {
-    color: var(--second-color);
+    color: var(--fourth-color);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: var(--primary-color);
 }
@@ -41,14 +41,14 @@ header {
 header h1 {
     font-weight: bold;
     font-size: 36px;
-    color: #EC9B3B;
+    color: var(--second-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(247, 215, 22, 0.5);
 }
 
 header a {
     text-decoration: none;
-    color: var(--second-color)
+    color: var(--fourth-color)
 }
 
 header nav {
@@ -67,7 +67,7 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 25px;
-    text-shadow: 0 0 10px rgba(247, 215, 22, 0.5);
+    text-shadow: 0 0 20px rgba(217, 202, 179, 0.5);
 }
 
 header nav ul li a:hover {
@@ -96,7 +96,7 @@ header nav ul li a:hover {
     text-decoration: underline;
     text-decoration-color: var(--third-color);
     font-size: 35px;
-    text-shadow: 0 0 10px rgba(236, 155, 59, 0.8);
+    text-shadow: 0 0 10px rgba(217, 202, 179, 0.8);
     padding-bottom: 30px;
     padding-top: 10px;
 }
@@ -205,7 +205,7 @@ header nav ul li a:hover {
 
 .photo-link-text a button {
     padding: 10px 15px;
-    background-color: rgba(162, 91, 91, 0.6);
+    background-color: rgba(217, 202, 179, 0.6);
     background-repeat: no-repeat;
     border: none;
     border-radius: 0%;
@@ -239,7 +239,7 @@ header nav ul li a:hover {
     padding-right: 20px;
     padding-bottom: 20px;
     text-align: center;
-    text-shadow: 0 0 10px rgba(236, 155, 59, 0.8);
+    text-shadow: 0 0 10px rgba(84, 18, 18, 0.8);
     text-decoration: underline;
     text-decoration-color: var(--third-color);
 
