--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,7 @@ header nav ul li a:hover {
 
 .rb-img-working {
     width: 100%;
-    height: 360px;
+    height: 400px;
     display: flex;
     position: relative;
     border-radius: 10%;
@@ -203,7 +203,7 @@ header nav ul li a:hover {
 
 .secondary-img-working {
     width: 100%;
-    height: 360px;
+    height: 320px;
     display: flex;
     position: relative;
     border-radius: 10%;
@@ -211,8 +211,8 @@ header nav ul li a:hover {
 
 .secondary-text {
     position: absolute;
-    bottom: 0;
-    right: 10px;
+    bottom: 2px;
+    right: 15px;
     font-size: 20px;
     color: white;
     opacity: .8;
