--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,6 +201,15 @@ header nav ul li a:hover {
     opacity: .8;
 }
 
+.fyb-text {
+    position: absolute;
+    bottom: 10px;
+    right: 25px;
+    font-size: 30px;
+    color: black;
+    opacity: .8;
+}
+
 .secondary-img-working {
     width: 100%;
     height: 320px;
