--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,15 +216,67 @@ header nav ul li a:hover {
     display: flex;
     position: relative;
     border-radius: 10%;
+    background-color: #D9CAB3;
+}
+
+.challenge-img-working {
+    width: 85%;
+    height: 250px;
+    display: flex;
+    position: relative;
+    border-radius: 10%;
+    background-color: #D9CAB3;
+}
+
+.challenge-text {
+    position: absolute;
+    bottom: -10px;
+    left: 20px;
+    font-size: 20px;
+    color: white;
+    /* opacity: .8; */
+}
+
+.challenge-text-2 {
+    position: absolute;
+    bottom: -10px;
+    left: 20px;
+    font-size: 20px;
+    color: black;
+    /* opacity: .8; */
 }
 
 .secondary-text {
     position: absolute;
-    bottom: 2px;
-    right: 15px;
+    bottom: 0px;
+    right: 25px;
     font-size: 20px;
     color: white;
+    /* opacity: .8; */
+}
+
+.secondary-img-working-wash {
+    width: 100%;
+    height: 320px;
+    display: flex;
+    position: relative;
+    border-radius: 10%;
+    background-color: #D9CAB3;
     opacity: .8;
+}
+
+.secondary-wash-text {
+    position: absolute;
+    bottom: 2px;
+    right: 25px;
+    font-size: 20px;
+    font-weight: bolder;
+    color: black;
+    /* opacity: .8; */
+}
+
+.img-text {
+    font-weight: 400;
 }
 
 /* End Work Section */
@@ -236,8 +288,8 @@ header nav ul li a:hover {
     font-size: 20px;
     padding-bottom: 20px;
     margin: 25px auto;
-    width: 95%;
-    border-radius: 5%;
+    width: 60%;
+
 }
 
 .reach-me h2 {
@@ -249,7 +301,6 @@ header nav ul li a:hover {
     text-shadow: 0 0 10px rgba(84, 18, 18, 0.8);
     text-decoration: underline;
     text-decoration-color: var(--third-color);
-
 }
 
 address {
