--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,31 @@ header nav ul li a:hover {
     font-size: 35px;
     text-shadow: 0 0 10px rgba(217, 202, 179, 0.8);
     padding-bottom: 30px;
+    /* padding-top: 10px; */
+}
+
+.section-title-3 {
+    text-align: center;
+    text-decoration: underline;
+    text-decoration-color: var(--third-color);
+    font-size: 28px;
+    text-shadow: 0 0 10px rgba(217, 202, 179, 0.8);
+    padding-bottom: 10px;
     padding-top: 10px;
+}
+
+.section-title-4 {
+    text-align: center;
+    font-size: 24px;
+    text-shadow: 0 0 10px rgba(217, 202, 179, 0.8);
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+
+.skills {
+    text-decoration: underline;
+    text-decoration-color: var(--third-color);
+    padding-bottom: 5px;
 }
 
 /* About Me section */
